fixing overly overflow

--- a/app/scripts/components/Search/search-style.scss
+++ b/app/scripts/components/Search/search-style.scss
@@ -37,6 +37,7 @@ $checkbox-color: #aea6a6;
 
       list-style: none;
       overflow: overlay;
+      overflow: auto;
       cursor: pointer;
 
       .search-results-item {
